# nautobot-plugin-show-connections

./: LICENSE  pyproject.toml  tasks.py
development/: Dockerfile  creds.env  creds.example.env  docker-compose.base.yml  nautobot_config.py
nautobot_show_connections/: __init__.py  template_content.py
nautobot_show_connections/templates/nautobot_show_connections/: device-connections.html  site-connections.html
